--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Webpage</title>
+	<title>Airtable Wiz Application Form</title>
 	<link href="https://fonts.googleapis.com/css?family=Inter" rel="stylesheet">
 	<style>
 		body {
