--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
 	<style>
 		body {
 			font-family: 'Inter', sans-serif;
+      overflow: hidden;
+
 		}
 		.container {
 			display: flex;
 			flex-direction: column;
 			align-items: center;
 			justify-content: center;
-			height: 100vh;
+			min-height: 100vh;
 		}
 		.btn {
 			background-color: #554EEE;
