Added hover effect to button

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 			text-decoration: none;
 			text-align: center;
 			display: block;
+			transition: background-color 0.3s ease-in-out;
+		}
+		.btn:hover {
+			background-color: rgba(85, 78, 238, 0.69);
 		}
 		p:first-child {
 			opacity: 0.9;
