--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 			background-color: rgba(85, 78, 238, 0.69);
 		}
 		p:first-child {
+      margin-top: 1.5rem;
 			opacity: 0.9;
 		}
 		p:last-child {
