--- a/index.html
+++ b/index.html
@@ -1,51 +1,58 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Airtable Wiz Application Form</title>
-	<link href="https://fonts.googleapis.com/css?family=Inter" rel="stylesheet">
-	<style>
-		body {
-			font-family: 'Inter', sans-serif;
+  <title>Airtable Wiz Application Form</title>
+  <link href="https://fonts.googleapis.com/css?family=Inter" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
       overflow: hidden;
 
-		}
-		.container {
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			justify-content: center;
-			min-height: 100vh;
-		}
-		.btn {
-			background-color: #554EEE;
-			color: #fff;
-			padding: 10px 20px;
-			border-radius: 30px;
-			text-decoration: none;
-			text-align: center;
-			display: block;
-			transition: background-color 0.3s ease-in-out;
-		}
-		.btn:hover {
-			background-color: rgba(85, 78, 238, 0.69);
-		}
-		p:first-child {
+    }
+
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      min-height: 100vh;
+    }
+
+    .btn {
+      background-color: #554EEE;
+      color: #fff;
+      padding: 10px 20px;
+      border-radius: 30px;
+      text-decoration: none;
+      text-align: center;
+      display: block;
+      transition: background-color 0.3s ease-in-out;
+    }
+
+    .btn:hover {
+      background-color: rgba(85, 78, 238, 0.69);
+    }
+
+    p:first-child {
+      opacity: 0.9;
+    }
+
+    p:last-child {
       margin-top: 1.5rem;
-			opacity: 0.9;
-		}
-		p:last-child {
-			margin-top: 1.5rem;
       font-size: 12px;
       opacity: 0.69;
-		}
-	</style>
+    }
+  </style>
 </head>
+
 <body>
-	<div class="container">
-		<p>Ready to take the next big step for your business?</p>
-		<h1>Join other Indie Makers now!</h1>
-		<a href="https://airtable.com/shrEE8lsaVGqi3WKZ" class="btn" target="_blank">Start Work!</a>
-		<p>No spam. Unsubscribe at any time.</p>
-	</div>
+  <div class="container">
+    <p>Ready to take the next big step for your business?</p>
+    <h1>Join other Indie Makers now!</h1>
+    <a href="https://airtable.com/shrEE8lsaVGqi3WKZ" class="btn" target="_blank">Start Work!</a>
+    <p>No spam. Unsubscribe at any time.</p>
+  </div>
 </body>
+
 </html>
