--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <title>Airtable Wiz Application Form</title>
-  <link href="https://fonts.googleapis.com/css?family=Inter" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
   <style>
     body {
-      font-family: 'Inter', sans-serif;
+      font-family: 'Rubik', sans-serif;
       overflow: hidden;
 
     }
