--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body>
   <div class="container">
     <p>Ready to take the next big step for your business?</p>
-    <h1>Join other Indie Makers now!</h1>
+    <h1>Join other entrepreneurs now!</h1>
     <a href="https://airtable.com/shrEE8lsaVGqi3WKZ" class="btn" target="_blank">Start Work!</a>
     <p>No spam. Unsubscribe at any time.</p>
   </div>
